# routes/movies.js
@@ -1,10 +1,10 @@
 const express = require('express');
 const router = express.Router();
-const moviesController = require('../controllers/movies'); // Verifica la ruta correcta
+const moviesController = require('../controllers/movies');
 
 // Definición de las rutas
-router.get('/', moviesController.getAllMovies); // Obtiene todas las películas
-router.get('/:id', moviesController.getSingleMovie); // Obtiene una película por ID
+router.get('/', moviesController.getAll); // Obtiene todas las películas
+router.get('/:id', moviesController.getSingle); // Obtiene una película por ID
 router.post('/', moviesController.createMovie); // Crea una nueva película
 router.put('/:id', moviesController.updateMovie); // Actualiza una película
 router.delete('/:id', moviesController.deleteMovie); // Elimina una película
